[package]
name = "parsley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos="0.12.0"
ansi_term = "0.12"
parsley-derive = { path = "../parsley-derive", optional=true }

[features]
default = ["export_derive"]
export_derive = ["parsley-derive"]
