[package]
name = "parsley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsley-derive = { path = "../parsley-derive", optional=true }
parsley-util = { path = "../parsley-util" }

[features]
default = ["export_derive"]
export_derive = ["parsley-derive"]
